Add CSS styling and link to index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 
 <head>
     <title>My First Git Project</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<head>
+    <title>My First Git Project</title>
 </head>
 
 <body>
