Add navigation menu

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 </head>
 
 <body>
+    <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
     <h1>Hello Git!</h1>
     <p>This is my first project with version control.</p>
 </body>
