--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </ul>
     </nav>
 
-    <h1>Hello Git!</h1>
+    <h1>Hai Git!</h1>
     <p>This is my first project with version control.</p>
 </body>
 
